# wasmi

crates/cli/src/: args.rs  main.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: guest_memory.rs
crates/wasi/src/sync/snapshots/: preview_1.rs
crates/wasmi/: Cargo.toml
crates/wasmi/src/: linker.rs
