[package]
name = "wasmi_wasi"
version = "0.32.0-beta.1"
documentation = "https://docs.rs/wasmi_wasi"
description = "WASI library support for the wasmi interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasi-common = { git = "ssh://git@github.com/yagehu/wasmtime.git", branch = "yagehu/wazzi" }
wasi-cap-std-sync = { git = "ssh://git@github.com/yagehu/wasmtime.git", branch = "yagehu/wazzi" }
wiggle = { git = "ssh://git@github.com/yagehu/wasmtime.git", branch = "yagehu/wazzi" }
# wasi-common = { path = "../../../wasmtime/crates/wasi-common" }
# wasi-cap-std-sync = { path = "../../../wasmtime/crates/wasi-common/cap-std-sync" }
# wiggle = { path = "../../../wasmtime/crates/wiggle", default-features = false, features = ["wiggle_metadata"] }
wasmi = { version = "0.32.0-beta.1", path = "../wasmi" }

[dev-dependencies]
wat = "1.0.50"

[features]
default = ["sync"]
sync = []
